--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  * @Description: 
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link href="/favicon.ico" rel="icon" />
